Fixing z-index of .topband
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@11107 48a7a3f7-ad46-0410-b969-29950918272e

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -29,7 +29,7 @@ a:active {
 	top:0px;
 	width:100%;
 	height:48px;
-	z-index:1;
+	z-index:3;
 	font-size: 10px;
 	font-weight: bold;
 	color: #FFFFFF;
